# jnkepler

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  readthedocs.yaml  setup.py
.github/workflows/: develop.yml  main.yml
docs/: Makefile  conf.py  index.rst  install.md  quickstart.md  requirements.txt
docs/api/: jnkepler.data.rst  jnkepler.jaxttv.rst  jnkepler.keplerian.rst  jnkepler.nbodyrv.rst  jnkepler.nbodytransit.rst  jnkepler.rst  jnkepler.tests.rst  modules.rst
documents/: index.rst
examples/: check_energy.ipynb  check_tc_prec.ipynb  kep51.ipynb  minimal_example.ipynb  v1298tau_samples.npz  v1298tau_transit_times.csv
examples/comparison_with_ttvfast+emcee/: kep51.tsv
examples/kep51_lc/: download_lc.ipynb  lc_double.txt  lc_no_overlap.txt  ttvs.txt
examples/kep9/: ttv-c.txt
examples/performance_tests/: check_rv.ipynb  check_spped.ipynb
src/: jaxttv.py  optim.py
src/jnkepler/: __init__.py  infer.py  information.py
src/jnkepler/data/: JaxTTVobject.pkl  hessian.txt  info.txt  info_lnpmass.npy  info_unconstrained_ref.npy  info_unconstrained_ref_lnpmass.npy  kep51_4planet.csv  kep51_4planet_sol-2.csv  kep51_4planet_sol.csv  kep51_dt1.0_start155.00_end2950.00_de.csv  kep51_dt1.0_start155.00_end2950.00_grad.txt  kep51_dt1.0_start155.00_end2950.00_params.txt  kep51_dt1.0_start155.00_end2950.00_pdict.csv  kep51_dt1.0_start155.00_end2950.00_pdict_ttvfast.csv  kep51_dt1.0_start155.00_end2950.00_tc.csv  kep51_lc_model.txt  tcbug_masses.txt  (+10 more)
tests/: kep51.ipynb  kep9.ipynb  toi1136-new.ipynb  toi1136-ttvfast.ipynb  toi1136.ipynb  v1298tau-new.ipynb  v1298tau.ipynb  v1298tau_jitter.ipynb  v1298tau_modified_error.ipynb
tests/jaxttv/: test_conversion.py  test_reproduce.py
tests/kep51/: ttv.txt
tests/kep9/: ttv-b.txt
tests/nbodytransit/: bugfix-nbodytransit.ipynb
tests/ttvfast_comparison/: runtime.py  test_ttvfast.py
tests/unittests/: test_information.py
tests/v1298tau/: ttv.txt
(+47 files in other folders)
