[build-system]
requires = ["setuptools>=70", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/jnkepler/jnkepler_version.py"
write_to_template = "__version__ = \"{version}\"\n"
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"

[project]
name = "jnkepler"
dynamic = ["version"]
description = "Differentiable JAX N-body code for modeling nearly-Keplerian orbits"
authors = [
    { name = "Kento Masuda", email = "kmasuda@ess.sci.osaka-u.ac.jp" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax<7.0", 
    "numpyro", 
    "pandas", 
    "numpy",
    "matplotlib", 
    "importlib_resources",
    "corner",
    "arviz"
]

[project.urls]
Homepage = "https://github.com/kemasuda/jnkepler"
Repository = "https://github.com/kemasuda/jnkepler"
Documentation = "https://github.com/kemasuda/jnkepler"

[tool.setuptools]
license-files = ["LICENSE"]
